# solana-non-custodial-staking

./: .env.example  .gitignore  .prettierignore  .solitarc.js  Anchor.toml  README.md  clippy.toml  custom-types.d.ts  nc-staking.ts  package.json  tsconfig.json
.github/workflows/: cached-build.yml  main.yml  rust.yml  single-action.yml
programs/nc-staking/: Cargo.toml
programs/nc-staking/src/: error.rs  errors.rs  lib.rs  mpl.rs  safe_math.rs  utils.rs
programs/nc-staking/src/instructions/: add_whitelist.rs  admin_unstake.rs  claim.rs  freeze.rs  init_staking.rs  init_staking_config.rs  init_staking_vault.rs  mod.rs  modify_whitelist.rs  stake.rs  thaw.rs  transfer_wrapper.rs  unstake.rs  update_staking_config.rs  upgrade_user_state.rs
programs/nc-staking/src/state/: mod.rs  program_state.rs  stake_info.rs  staking_config.rs  user.rs  user_v2.rs  vault.rs  whitelist.rs
scripts/: deploy_config.yml  deploy_program.sh  update_anchor_wallet.sh  update_program_id.sh
tests/: 0-constants.ts  0-user-journey.test.ts  1-generate-configs.test.ts  1-generate-nft.test.ts  2-generate-configs.test.ts  2-generate-nft.test.ts  3-user-journey.test.ts  4-admin-unstake.test.ts  admin-unstake.ts  basic.test.ts  basic.ts  check-user-state.ts  claim.test.ts  devnet-nc-staking.test.ts  devnet.nc-staking.test.ts  generate-configs.ts  generate-nft.ts  generate-staking-configs.ts  index.test.ts  localnet.nc-staking.test.ts  metaplex.ts  mint-nft.ts  nc-staking.ts  transfer-token.example.ts  transfer-token.test.ts  types.d.ts  update-staking-config.ts  utils.ts  whitelist.test.ts
(+81 files in other folders)
